# vk_black_hole

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: black_hole.comp  black_hole.slang  quaternion.slang
src/: local_dirs.h.in  main.cpp  video_writer.cpp  video_writer.hpp  vma.cpp
